castopod/shadowradio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shadowradio
  namespace: castopod
  labels:
    app: shadowradio
spec:
  ports:
    - port: 8000
      name: shadowradio
  selector:
    app: shadowradio
