castopod/shadowradio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shadowradio
  namespace: castopod
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: shadowrad.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shadowradio
                port:
                  number: 8000
  tls:
    - hosts:
        - shadowrad.io
      secretName: shadowrad-io-cert
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: shadowradio-ext
#  namespace: castopod
#spec:
#  ingressClassName: nginx-external
#  rules:
#    - host: shadowrad.io
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: shadowradio
#                port:
#                  number: 8000
#  tls:
#    - hosts:
#        - shadowrad.io
#      secretName: shadowrad-io-cert
